#ifndef __REC_COMMAND_DATA_SETTERS__
#define __REC_COMMAND_DATA_SETTERS__

// Created by the command line:
// new --include=command/Command --proto=Commands Setters.def

#include "rec/command/Command.h"
#include "rec/util/Defaulter.h"

namespace rec {
namespace command {
namespace data {

extern Def<Commands> setters;

}  // namespace data
}  // namespace command
}  // namespace rec

#endif  // __REC_COMMAND_DATA_SETTERS__
